# learning-c

./: .gitignore  CMakeLists.txt  HelloWorld.c  printf.c  printf2.c
00_Temp/: temp1.c
010_Do-While-loop/: 00_Theory  01_dw1.c  02_dw2.c  03_dw3.c  04_infiniteLoop.c
02_Signed & Unsigned Numbers in Memory/: Pgrm_1.c  pgrm1.c  pgrm2.c
03_Extension n Truncation/: truncation.c
03_Extension_n_Truncation/: extension.c
04_Integer Promotion/: pgrm1.c  pgrm2.c  pgrm4.c
04_Integer_Promotion/: pgrm3.c
05_TypeConversion/: tc1.c  tc2.c  tc3.c  tc4.c  tc5.c
06_if else/: 04_if4.c  08_ie.c
06_if_else/: 01_if1.c  02_if2.c  03_if3.c  05_ie.c  06_ie.c  07_ie.c
07_Switch-Case/: 00_temp.c  01_sc.c  03_sc.c  04_fallthroughSC_01.c  05_fallthroughSC_02.c  07_Gate2012.c  08_sc.c
07_Switch_Case/: 02_sc.c  06_FTSC_021.c
08_While-loop/: 01_w1.c  02_w2.c
08_While_loop/: 03_w3.c
09_For-loop/: 00_for loop vs while loop  02_f2.c  03_f3.c
09_For_loop/: 01_f1.c
11_Operators_in_C/: 01_leftShift.c  02_rightShift.c  03_GateQue2025.c  04_ConditionalOrTernaryOp.c  05_commaOp.c  06_commaOp2.c  07_commaOp3.c
12_Sequence_point_in_C/: 01_Sp1.c  02_Sp2.c  03_Sp3.c
13_Short_circuiting/: 01_Sc1.c  02_Sc2.c  03_Sc3.c  04_Sc4.c
14_Order_of_Evaluation/: 01_OE1.c  02_OE2.c  03_OE3.c  04_OE4.c
15_Functions_in_C/: 00_Notes  00_Notes2  00_Notes3  00_Notes4  00_Notes5  01_f1.c  02_f2.c  02_f22.c  03_f3.c  04_f4.c  05_pyq_fake_swap.c  06_pyq2.c
16_Storage_Classes_in_C/: 00_note  01_static_1.c  02_static_2.c  03_static_3.c  04_static_4.c  05_static_5.c  06_extern_1.c  07_extern_2.c
(+47 files in other folders)
