cmake_minimum_required(VERSION 3.31)
project(C_Programming C)

set(CMAKE_C_STANDARD 11)

add_executable(HelloWorld 01_Basics/HelloWorld.c)
add_executable(Printf 01_Basics/printf.c)
add_executable(Printf2 01_Basics/printf2.c)
add_executable(Pgrm1 02_Signed & Unsigned Numbers in Memory/pgrm1.c)
add_executable(Pgrm2 02_Signed & Unsigned Numbers in Memory/pgrm2.c)